# red-swiss

./: .gitignore  README.md  pyproject.toml
script/: alias.sh  oscp-swiss.sh
script/module/: common.sh  disc.sh  payload.sh  recon.sh  session.sh  target.sh
script/utils/: _is_ip.sh  _log.sh  _set_variable.sh
src/module/: utils.py
src/utils/: __init__.py  command_wrapper.py
