[tool.poetry]
name = "red-swiss"
version = "3.0.0"
description = "Make red teaming easy."
authors = ["dextermallo <dextermallo@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "http://google.com"
packages = [
    { include = "src" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
pyperclip = "^1.9.0"

[tool.poetry.scripts]
listen = "src.module.utils:listen"
ship = "src.module.utils:ship"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"